Good place to commit

--- a/elements.html
+++ b/elements.html
@@ -27,10 +27,10 @@
 									<div id="menu">
 										<ul>
 											<li><a href="index.html">Home</a></li>
-											<li><a href="generic.html">Generic</a></li>
-											<li><a href="elements.html">Elements</a></li>
-											<li><a href="#">Sign Up</a></li>
-											<li><a href="#">Log In</a></li>
+											<li><a href="generic.html">Code Shop</a></li>
+											<li><a href="elements.html">Portfolio</a></li>
+											<li><a href="#">Resume</a></li>
+											<li><a href="#">Contact</a></li>
 										</ul>
 									</div>
 								</li>
@@ -41,8 +41,8 @@
 				<!-- Main -->
 					<article id="main">
 						<header>
-							<h2>Elements</h2>
-							<p>Aliquam ut ex ut interdum donec amet imperdiet eleifend</p>
+							<h2>Portfolio</h2>
+							<p>below you'll find a selection of some of my most recent projects</p>
 						</header>
 						<section class="wrapper style5">
 							<div class="inner">
@@ -367,7 +367,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 							<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 						<ul class="copyright">
-							<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; Creative Commons</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
 					</footer>
 
