--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
 					<section id="one" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
-								<h2>Arcu aliquet vel lobortis ata nisl<br />
-								eget augue amet aliquet nisl cep donec</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+								<h2>Strategy<br />
+								</h2>
+								<p>Strategy is the underlying foundation of every great brand experience.<br />
+								Strategy that is centered on clarifying a brand’s message to inform their decisions and shape their actions.</p>
 							</header>
 							<ul class="icons major">
 								<li><span class="icon fa-gem major style1"><span class="label">Lorem</span></span></li>
@@ -73,23 +73,23 @@
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
 							<div class="image"><img src="images/coding-grayscale.jpg" alt="" /></div><div class="content">
-								<h2>Magna primis lobortis<br />
-								sed ullamcorper</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+								<h2>Design<br />
+								</h2>
+								<p>Brand design shapes a brand experience by creating identity touchpoints from design systems to key messages.</p>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/desk.jpg" alt="" /></div><div class="content">
-								<h2>Tortor dolore feugiat<br />
-								elementum magna</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+								<h2>The skills you need<br />
+								and the skills you want</h2>
+								<p>Learning never ceases and I'ts important to stay relevant with new technologies and standards.</p>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/cssbooks.jpg" alt="" /></div><div class="content">
-								<h2>Augue eleifend aliquet<br />
-								sed condimentum</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+								<h2>Digital<br />
+								</h2>
+								<p>Creative functionality with intuitive design makes every interaction more meaningful. Embracing digital as an extension of the physical brand has the power to elevate the experience.</p>
 							</div>
 						</section>
 					</section>
@@ -98,34 +98,34 @@
 					<section id="three" class="wrapper style3 special">
 						<div class="inner">
 							<header class="major">
-								<h2>Accumsan mus tortor nunc aliquet</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+								<h2>A few examples of my previous Projects</h2>
+								<p>I have been exploring the web since 1994 and realized early on it would fundamentally change how we share information, connect and create a better world for everyone.<br />
+								I am excited and honored to finally play a crucial role in creating and building sites and applications for the web 3.0.</p>
 							</header>
 							<ul class="features">
 								<li class="icon fa-paper-plane">
-									<h3>Arcu accumsan</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3>FutureNetworking.com</h3>
+									<p>An IT company thats been in business for 20 years needed to redesign and update their online presence to accuratly showcase some new products and services</p>
 								</li>
 								<li class="icon solid fa-laptop">
-									<h3>Ac Augue Eget</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3>SigmaSolutions.io</h3>
+									<p>Sigma solutions is a technology consultantcy company I co-founded to help small business leverage open source technologies and telecommunications to reduce expenditure and streamline operations.</p>
 								</li>
 								<li class="icon solid fa-code">
-									<h3>Mus Scelerisque</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3>Sweet Eats Bakery</h3>
+									<p>The mighty bakery that could. With an elegent design and eye catching imagery these bakeries sweets will eat your heart out.</p>
 								</li>
 								<li class="icon solid fa-headphones-alt">
-									<h3>Mauris Imperdiet</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3>Great Idea</h3>
+									<p>Who doesnt have a Great idea nowadays. Get your project or idea in front of everyone with a unique and custom design tailored just for you.</p>
 								</li>
 								<li class="icon fa-heart">
-									<h3>Aenean Primis</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3>User Interface</h3>
+									<p>A websites functionality and interface a paramount to drive engagement, get people buzzing and to illustrate your business effectively.</p>
 								</li>
 								<li class="icon fa-flag">
-									<h3>Tortor Ut</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3>Responsive Design</h3>
+									<p>Web accessibility is more important than ever and optimizing the design for every range of devices ensures a seamless and congruent experience across every device.</p>
 								</li>
 							</ul>
 						</div>
@@ -135,8 +135,8 @@
 					<section id="cta" class="wrapper style4">
 						<div class="inner">
 							<header>
-								<h2>Arcue ut vel commodo</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum endrerit imperdiet amet eleifend fringilla.</p>
+								<h2>Let me build the website you need</h2>
+								<p>Schedule a free consultation today and take the next step in your personal or business growth.</p>
 							</header>
 							<ul class="actions stacked">
 								<li><a href="#" class="button fit primary">Resume</a></li>
