Good place to commit

--- a/index.html
+++ b/index.html
@@ -104,27 +104,27 @@
 							</header>
 							<ul class="features">
 								<li class="icon fa-paper-plane">
-									<h3>FutureNetworking.com</h3>
+									<h3><a href="https://futurenetworking.com/">FutureNetworking.com</a></h3>
 									<p>An IT company thats been in business for 20 years needed to redesign and update their online presence to accuratly showcase some new products and services</p>
 								</li>
 								<li class="icon solid fa-laptop">
-									<h3>SigmaSolutions.io</h3>
+									<h3><a href="http://sigmasolutions.io">SigmaSolutions.io</a></h3>
 									<p>Sigma solutions is a technology consultantcy company I co-founded to help small business leverage open source technologies and telecommunications to reduce expenditure and streamline operations.</p>
 								</li>
 								<li class="icon solid fa-code">
-									<h3>Sweet Eats Bakery</h3>
+									<h3><a href="https://codepen.io/ciphergyst/pen/PryKKzSweet">Eats Bakery</a></h3>
 									<p>The mighty bakery that could. With an elegent design and eye catching imagery these bakeries sweets will eat your heart out.</p>
 								</li>
 								<li class="icon solid fa-headphones-alt">
-									<h3>Great Idea</h3>
+									<h3><a href="https://ciphergyst.github.io/ciphergyst.greatidea.github.io/">Great Idea</a></h3>
 									<p>Who doesnt have a Great idea nowadays. Get your project or idea in front of everyone with a unique and custom design tailored just for you.</p>
 								</li>
 								<li class="icon fa-heart">
-									<h3>User Interface</h3>
+									<h3><a href="#">User Interface</a></h3>
 									<p>A websites functionality and interface a paramount to drive engagement, get people buzzing and to illustrate your business effectively.</p>
 								</li>
 								<li class="icon fa-flag">
-									<h3>Responsive Design</h3>
+									<h3><a href="#">Responsive Design<a/a></h3>
 									<p>Web accessibility is more important than ever and optimizing the design for every range of devices ensures a seamless and congruent experience across every device.</p>
 								</li>
 							</ul>
@@ -140,7 +140,7 @@
 							</header>
 							<ul class="actions stacked">
 								<li><a href="#" class="button fit primary">Resume</a></li>
-								<li><a href="#" class="button fit">Schedule an Interview</a></li>
+								<li><a href="#" class="button fit">Schedule Consultation</a></li>
 							</ul>
 						</div>
 					</section>
