Adding linked repos

--- a/index.html
+++ b/index.html
@@ -120,11 +120,11 @@
 									<p>Who doesnt have a Great idea nowadays. Get your project or idea in front of everyone with a unique and custom design tailored just for you.</p>
 								</li>
 								<li class="icon fa-heart">
-									<h3><a href="#">User Interface</a></h3>
+									<h3><a href="https://github.com/Ciphergyst/UI-III-Flexbox">User Interface</a></h3>
 									<p>A websites functionality and interface a paramount to drive engagement, get people buzzing and to illustrate your business effectively.</p>
 								</li>
 								<li class="icon fa-flag">
-									<h3><a href="#">Responsive Design<a/a></h3>
+									<h3><a href="https://github.com/Ciphergyst/responsive-web-design-I">Responsive Design<a/a></h3>
 									<p>Web accessibility is more important than ever and optimizing the design for every range of devices ensures a seamless and congruent experience across every device.</p>
 								</li>
 							</ul>
