fixing the github pages

--- a/generic.html
+++ b/generic.html
@@ -29,7 +29,7 @@
 											<li><a href="index.html">Home</a></li>
 											<li><a href="generic.html">Code Shop</a></li>
 											<li><a href="elements.html">Portfolio</a></li>
-											<li><a href="#">Resume</a></li>
+											<li><a href="JeremyMcGrath_Resume.pdf">Resume</a></li>
 											<li><a href="#">Contact</a></li>
 										</ul>
 									</div>
