--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 											<li><a href="index.html">Home</a></li>
 											<li><a href="generic.html">Code Shop</a></li>
 											<li><a href="elements.html">Portfolio</a></li>
-											<li><a href="#">Resume</a></li>
+											<li><a href="JeremyMcGrath_Resume.pdf">Resume</a></li>
 											<li><a href="#">Contact</a></li>
 										</ul>
 									</div>
@@ -112,7 +112,7 @@
 									<p>Sigma solutions is a technology consultantcy company I co-founded to help small business leverage open source technologies and telecommunications to reduce expenditure and streamline operations.</p>
 								</li>
 								<li class="icon solid fa-code">
-									<h3><a href="https://codepen.io/ciphergyst/pen/PryKKzSweet">Eats Bakery</a></h3>
+									<h3><a href="https://codepen.io/ciphergyst/pen/PryKKz">Sweet Eats Bakery</a></h3>
 									<p>The mighty bakery that could. With an elegent design and eye catching imagery these bakeries sweets will eat your heart out.</p>
 								</li>
 								<li class="icon solid fa-headphones-alt">
